--- a/package.json
+++ b/package.json
@@ -7,22 +7,42 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --cache --write .",
+    "format:check": "prettier --cache --check .",
+    "eslint": "eslint --cache --fix .",
+    "eslint:check": "eslint --cache .",
+    "stylelint": "stylelint --cache --fix **/*.css --ignore-path .gitignore",
+    "stylelint:check": "stylelint --cache **/*.css --ignore-path .gitignore"
   },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@dword-design/eslint-plugin-import-alias": "^6.0.3",
     "@eslint/js": "^9.36.0",
+    "@types/eslint": "^9.6.1",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.4.0",
+    "prettier": "^3.6.2",
+    "stylelint": "^16.25.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^7.3.0",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
