--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,4 @@
 {
-  "recommendations": [
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint",
-    "stylelint.vscode-stylelint",
-  ],
+  "recommendations": ["esbenp.prettier-vscode", "dbaeumer.vscode-eslint", "stylelint.vscode-stylelint"],
   "unwantedRecommendations": []
 }
