--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "stylelint:check": "stylelint --cache **/*.css --ignore-path .gitignore"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
