--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.4.0",
+    "mock-socket": "^9.3.1",
+    "msw": "^2.11.5",
     "prettier": "^3.6.2",
     "stylelint": "^16.25.0",
     "stylelint-config-html": "^1.1.0",
@@ -49,5 +51,10 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
