--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clsx": "^2.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
