環境変数のコメントを追加し、ネットワーク設定の位置を修正

--- a/compose.prd.yaml
+++ b/compose.prd.yaml
@@ -7,17 +7,19 @@ services:
     restart: unless-stopped
     ports:
       - "5173:5173"
-    networks:
-      - app
     environment:
       TZ: Asia/Tokyo
+    networks:
+      - app
   server:
     image: ghcr.io/sohosai/ultradonguri-server:latest
     restart: unless-stopped
     environment:
       TZ: Asia/Tokyo
-      ADDRESS: ${ADDRESS:-}
-      PASSWORD: ${PASSWORD:-}
+      # OBS WebSocket Address and Password (MUST)
+      ADDRESS: host.docker.internal:4455
+      # OBS WebSocket Password (MUST)
+      PASSWORD: "your_obs_password"
       NORMAL_SCENE_NAME: "Normal_Scene"
       MUTED_SCENE_NAME: "Muted_Scene"
       CM_SCENE_NAME: "CM_Scene"
